StyleCV.css
body {     
    font-family: 'JetBrains Mono', monospace;        
    margin: 0;
    padding: 0;
    text-align: left;
    scroll-behavior: smooth;
}

#nomEcriture {
    font-family: 'VT323', monospace;
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    font-size: 3em;
    color: #e0e0e0;
    border-right: solid 17px white;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
}


@keyframes blink {
    from, to {border-color: transparent;}
    50% {border-color: white;}
}

p {
    color: #a0a0a0;  /* Texte secondaire en gris moyen */
    font-size: 1.2em;
    margin-top: 20px;
}

a {
    color: white;  /* Lien en bleu electrique */
    text-decoration: none;
    font-weight: bold;
}

a:hover {
    color: #33ccff;  /* Lien en bleu clair au survol */
}

section {
    background-color: #E5E5E5;
    color: black;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 2;
    position: relative;
}

#intro {
    background-color: black; 
    color: #e0e0e0;
}

div.texte {
    padding: 40px;
    margin-right: 40px;
    
}

#fleche {
    position: fixed;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%) translateY(0);
    transition: transform 0.5s;
    font-size: 3em;
    
}

#fleche:hover {
    transform: translateX(-50%) translateY(-5px);
    transition: transform 0.5s;
}

#menu {
    opacity: 0;
    pointer-events: none;
    position: fixed;
    top: 50px;
    right: 10px;
    color: black;
    z-index: 3;
}

#menu ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

#menu li {
    writing-mode: vertical-rl;
}

#menu li a {
    color: black;
    font-family: "VT323", monospace;
    text-decoration: none;
    font-size: 1em;
}

#menu li a.active {
    color: white;
    background-color: black;
    border-radius: 10px;
    padding: 5px 10px;
    transition: all 0.3s ease;
}


@keyframes fonduArrive {
    from {
        opacity: 0;
        transform: translateX(20px);
    }
    to {
        opacity: 1;
        transform: translateX(0);
    }
}

#menu.appear {
    animation: fonduArrive 0.5s ease forwards;
    pointer-events: auto;
}

@keyframes fonduPart {
    from {
        opacity: 1;
        transform: translateX(0);
    }
    to {
        opacity: 0;
        transform: translateX(20px);
    }
}

#menu.disappear {
    animation: fonduPart 0.5s ease forwards;
}


div.indicateur {
    position: fixed;
    background-color: black;
    z-index: 2;
    border-radius: 10px;
    transition: all 0.4s ease;
    pointer-events: none;
}

